--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
-    <script defer src="./bucles.js"></script>
+    <script defer src="./ejercicio3_tp2.js"></script>
 </head>
 <body>
 </body>
