cómo interactuar con un objeto

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
-    <script defer src="./objetos.js"></script>
 </head>
 <body>
+    <script src="./objetos.js"></script>
 </body>
 </html>
