creamos clases Poo y objetos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <script src="./objetos.js"></script>
+    <script src="./clasesPoo.js"></script>
 </body>
 </html>
