actualizacion ejercicio 1 tp4

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <script src="./clasesPoo.js"></script>
+    <script src="./ejercicios_tp4/ejercicio1_tp4"></script>
 </body>
 </html>
