--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <title>JavaScript</title>
 </head>
 <body>
-    <script type="module" src="./date.js"></script>
+    <header>
+        <nav>
+            <a href="#" class="links">Link 1</a>
+            <a href="#" class="links">Link 2</a>
+            <a href="#" class="links">Link 3</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Este es el mejor título de mi vida 😃</h1>
+        <hr/>
+        <section>
+            <h3>Subtitulo</h3>
+            <p id="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, expedita!</p>
+        </section>
+    </main>
+    <footer>
+        Este es un footer
+    </footer>
+    <script type="module" src="./bom.js"></script>
 </body>
 </html>
