agregamos events, button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h1>Este es el mejor título de mi vida 😃</h1>
         <hr/>
         <section>
+            <button>Clickeame</button>
             <h3>Subtitulo</h3>
             <p id="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, expedita!</p>
         </section>
@@ -26,6 +27,6 @@
     <footer>
         Este es un footer
     </footer>
-    <script type="module" src="./bom.js"></script>
+    <script type="module" src="./events.js"></script>
 </body>
 </html>
